--- a/teacher.html
+++ b/teacher.html
@@ -65,6 +65,7 @@ document.querySelectorAll('table tbody tr').forEach(row => {
     <button onclick="createTest()">Создать тест</button>
     <button onclick="saveTest()">Сохранить Тест</button>
     <button onclick="loadTest()">Загрузить Тест</button>
+	<button onclick="importTable()">Импортировать Таблицу</button>
 
 <!-- Button to trigger modal -->
 <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#rowActionsModal">
